--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
  
 		<div class="main-about">
 			<div class="main-about-left">
-				<h1 class="main-about-left-title">Я Анастасия Майстренко <span style="color: #f38f79">SMM</span>-стратег</h1>
+				<h1 class="main-about-left-title">Я Анастасия Майстренко, <span style="color: #f38f79">SMM</span>-стратег</h1>
 				<p class="main-about-left-subtitle">Разрабатываю SMM-стратегии для брендов,  которые экономят бюджет клиентов на нецелевые действия и оптимизируют их ресурсы.</p>
 				<div class="main-about-left-box">
 					<div class="main-about-left-box-item">
