--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					</div>
 					<div class="main-about-left-box-item">
 						<img class="main-about-left-box-item-icon" src="assests/Circle.svg" alt="icon">
-						<p class="main-about-left-box-item-text">5+ стратегий для бизнесов и образовательных проектов.</p>
+						<p class="main-about-left-box-item-text">5+ стратегий для бизнесов и личных брендов.</p>
 					</div>
 				</div>
 			</div>
@@ -116,7 +116,7 @@
 		</div>
  
 		<div class="main-cases">
-			<h2 class="main-cases-title">My cases</h2>
+			<h2 class="main-cases-title">КЕЙСЫ</h2>
  
 			<div class="main-cases-box">
 				<div class="main-cases-items">
@@ -147,7 +147,7 @@
 		</div>
  
 		<div class="main-services">
-			<h2 class="main-services-title">My services</h2>
+			<h2 class="main-services-title">МОИ УСЛУГИ</h2>
  
 			<div class="main-services-box">
 				<div class="main-services-items">
