--- a/index.html
+++ b/index.html
@@ -29,20 +29,20 @@
  
 		<div class="left-info">
 			<div class="left-info-age">
-				<div class="left-info-age-title">Age:</div>
+				<div class="left-info-age-title">Возраст:</div>
 				<div class="left-info-age-subtitle">23</div>
 			</div>
 			<div class="left-info-address">
-				<div class="left-info-address-title">Address:</div>
-				<div class="left-info-address-subtitle">Moscow</div>
+				<div class="left-info-address-title">Адрес:</div>
+				<div class="left-info-address-subtitle">Москва</div>
 			</div>
 			<div class="left-info-email" style="display: none;">
 				<div class="left-info-email-title">Email:</div>
 				<div class="left-info-email-subtitle">enesta23@mail.ru</div>
 			</div>
 			<div class="left-info-tel">
-				<div class="left-info-tel-title">Tel:</div>
-				<div class="left-info-tel-subtitle">8(926)904-74-98</div>
+				<div class="left-info-tel-title">Тел:</div>
+				<div class="left-info-tel-subtitle">+7(926)904-74-98</div>
 			</div>
 		</div>
  
