--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					<img class="main-cases-items-img" src="assests/coffee.jpg" alt="icon">
 					<div class="main-cases-items-footer">
 						<img class="main-cases-items-footer-icon" src="assests/coffee-icon.svg" alt="icon">
-						<h4 class="main-cases-items-footer-text">Шляпинк - кофейня</h4>
+						<h4 class="main-cases-items-footer-text">Шляпинк (кофейня)</h4>
 					</div>
 				</div>
  
@@ -131,7 +131,7 @@
 					<img class="main-cases-items-img" src="assests/beauty.jpg" alt="icon">
 					<div class="main-cases-items-footer">
 						<img class="main-cases-items-footer-icon" src="assests/beauty-icon.svg" alt="icon">
-						<h4 class="main-cases-items-footer-text">AestheticBeauty - салон красоты</h4>
+						<h4 class="main-cases-items-footer-text">AestheticBeauty (салон красоты)</h4>
 					</div>
 				</div>
  
@@ -139,7 +139,7 @@
 					<img class="main-cases-items-img" src="assests/creativity.jpg" alt="icon">
 					<div class="main-cases-items-footer">
 						<img class="main-cases-items-footer-icon" src="assests/creativity-icon.svg" alt="icon">
-						<h4 class="main-cases-items-footer-text">SSHKETKA - творчество</h4>
+						<h4 class="main-cases-items-footer-text">SSHKETKA (кастомайзер и художник)</h4>
 					</div>
 				</div>
 			</div>
@@ -156,15 +156,15 @@
 						<h4 class="main-services-items-footer-text">SMM-ВЕДЕНИЕ</h4>
 						<div class="main-services-items-footer-item">
 							<img class="main-services-items-footer-icon" src="assests/Circle.svg" alt="icon">
-							<p class="main-services-items-footer-subtitle">light - 30.000р</p>
+							<p class="main-services-items-footer-subtitle">light - 35.000р</p>
 						</div>
 						<div class="main-services-items-footer-item">
 							<img class="main-services-items-footer-icon" src="assests/Circle.svg" alt="icon">
-							<p class="main-services-items-footer-subtitle">standart - 30.000р</p>
+							<p class="main-services-items-footer-subtitle">standart - 50.000р</p>
 						</div>
 						<div class="main-services-items-footer-item">
 							<img class="main-services-items-footer-icon" src="assests/Circle.svg" alt="icon">
-							<p class="main-services-items-footer-subtitle">VIP - 30.000р</p>
+							<p class="main-services-items-footer-subtitle">VIP - 70.000р</p>
 						</div>
  
 					</div>
