--- a/index.html
+++ b/index.html
@@ -156,15 +156,15 @@
 						<h4 class="main-services-items-footer-text">SMM-ВЕДЕНИЕ</h4>
 						<div class="main-services-items-footer-item">
 							<img class="main-services-items-footer-icon" src="assests/Circle.svg" alt="icon">
-							<p class="main-services-items-footer-subtitle">light - 35.000р</p>
+							<p class="main-services-items-footer-subtitle">LIGHT — 35.000р</p>
 						</div>
 						<div class="main-services-items-footer-item">
 							<img class="main-services-items-footer-icon" src="assests/Circle.svg" alt="icon">
-							<p class="main-services-items-footer-subtitle">standart - 50.000р</p>
+							<p class="main-services-items-footer-subtitle">STANDART — 50.000р</p>
 						</div>
 						<div class="main-services-items-footer-item">
 							<img class="main-services-items-footer-icon" src="assests/Circle.svg" alt="icon">
-							<p class="main-services-items-footer-subtitle">VIP - 70.000р</p>
+							<p class="main-services-items-footer-subtitle">VIP — 70.000р</p>
 						</div>
  
 					</div>
@@ -176,11 +176,11 @@
 						<h4 class="main-services-items-footer-text">РАЗРАБОТКА SMM-СТРАТЕГИИ</h4>
 						<div class="main-services-items-footer-item">
 							<img class="main-services-items-footer-icon" src="assests/Circle.svg" alt="icon">
-							<p class="main-services-items-footer-subtitle">Комплексная SMM-стратегия - 40.000р</p>
+							<p class="main-services-items-footer-subtitle">Комплексная SMM-стратегия — 40.000р</p>
 						</div>
 						<div class="main-services-items-footer-item">
 							<img class="main-services-items-footer-icon" src="assests/Circle.svg" alt="icon">
-							<p class="main-services-items-footer-subtitle">Контент-стратегия - 25.000р</p>
+							<p class="main-services-items-footer-subtitle">Контент-стратегия — 25.000р</p>
 						</div>
 					</div>
 				</div>
