--- a/index.html
+++ b/index.html
@@ -154,7 +154,42 @@
 					<img class="main-services-items-img" src="assests/5.jpg" alt="icon">
 					<div class="main-services-items-footer">
 						<h4 class="main-services-items-footer-text">SMM-ВЕДЕНИЕ</h4>
-						<div class="main-services-items-footer-item">
+
+						<div class="left-LIGHT">
+							<div class="left-LIGHT-title">
+								<h4 class="left-LIGHT-title-text">LIGHT</h4>
+								<img class="left-LIGHT-title-icon" src="assests/Arrow1.svg" alt="icon">
+							</div>
+							<div class="left-LIGHT-skills">
+								<p class="left-LIGHT-skills-text">Разработка и реализации SMM - стратегий</p>
+								<p class="left-LIGHT-skills-text">Глубинная аналитика и работа с данными</p>
+								<p class="left-LIGHT-skills-text" style="background-color: #f38f79; color: aliceblue;">35.000р</p>
+							</div>
+						</div>
+						<div class="left-STANDART">
+							<div class="left-STANDART-title">
+								<h4 class="left-STANDART-title-text">STANDART</h4>
+								<img class="left-STANDART-title-icon" src="assests/Arrow1.svg" alt="icon">
+							</div>
+							<div class="left-STANDART-skills">
+								<p class="left-STANDART-skills-text">Разработка и реализации SMM - стратегий</p>
+								<p class="left-STANDART-skills-text">Глубинная аналитика и работа с данными</p>
+								<p class="left-STANDART-skills-text" style="background-color: #f38f79; color: aliceblue;">35.000р</p>
+							</div>
+						</div>
+						<div class="left-VIP">
+							<div class="left-VIP-title">
+								<h4 class="left-VIP-title-text">VIP</h4>
+								<img class="left-VIP-title-icon" src="assests/Arrow1.svg" alt="icon">
+							</div>
+							<div class="left-VIP-skills">
+								<p class="left-VIP-skills-text">Разработка и реализации SMM - стратегий</p>
+								<p class="left-VIP-skills-text">Глубинная аналитика и работа с данными</p>
+								<p class="left-VIP-skills-text" style="background-color: #f38f79; color: aliceblue;">35.000р</p>
+							</div>
+						</div>
+
+						<!-- <div class="main-services-items-footer-item">
 							<img class="main-services-items-footer-icon" src="assests/Circle.svg" alt="icon">
 							<p class="main-services-items-footer-subtitle">LIGHT — 35.000р</p>
 						</div>
@@ -165,7 +200,7 @@
 						<div class="main-services-items-footer-item">
 							<img class="main-services-items-footer-icon" src="assests/Circle.svg" alt="icon">
 							<p class="main-services-items-footer-subtitle">VIP — 70.000р</p>
-						</div>
+						</div> -->
  
 					</div>
 				</div>
@@ -174,14 +209,39 @@
 					<img class="main-services-items-img" src="assests/4.jpg" alt="icon">
 					<div class="main-services-items-footer">
 						<h4 class="main-services-items-footer-text">РАЗРАБОТКА SMM-СТРАТЕГИИ</h4>
-						<div class="main-services-items-footer-item">
+
+						<div class="left-SMM">
+							<div class="left-SMM-title">
+								<h4 class="left-SMM-title-text">SMM-стратегия</h4>
+								<img class="left-SMM-title-icon" src="assests/Arrow1.svg" alt="icon">
+							</div>
+							<div class="left-SMM-skills">
+								<p class="left-SMM-skills-text">Разработка и реализации SMM - стратегий</p>
+								<p class="left-SMM-skills-text">Глубинная аналитика и работа с данными</p>
+								<p class="left-SMM-skills-text" style="background-color: #f38f79; color: aliceblue;">35.000р</p>
+							</div>
+						</div>
+
+						<div class="left-CON">
+							<div class="left-CON-title">
+								<h4 class="left-CON-title-text">Контент-стратегия</h4>
+								<img class="left-CON-title-icon" src="assests/Arrow1.svg" alt="icon">
+							</div>
+							<div class="left-CON-skills">
+								<p class="left-CON-skills-text">Разработка и реализации SMM - стратегий</p>
+								<p class="left-CON-skills-text">Глубинная аналитика и работа с данными</p>
+								<p class="left-CON-skills-text" style="background-color: #f38f79; color: aliceblue;">35.000р</p>
+							</div>
+						</div>
+
+						<!-- <div class="main-services-items-footer-item">
 							<img class="main-services-items-footer-icon" src="assests/Circle.svg" alt="icon">
 							<p class="main-services-items-footer-subtitle">Комплексная SMM-стратегия — 40.000р</p>
 						</div>
 						<div class="main-services-items-footer-item">
 							<img class="main-services-items-footer-icon" src="assests/Circle.svg" alt="icon">
 							<p class="main-services-items-footer-subtitle">Контент-стратегия — 25.000р</p>
-						</div>
+						</div> -->
 					</div>
 				</div>
 			</div>
