--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
 						<div class="left-LIGHT">
 							<div class="left-LIGHT-title">
-								<p class="left-LIGHT-title-text">LIGHT</p>
+								<h4 class="left-LIGHT-title-text">LIGHT</h4>
 								<img class="left-LIGHT-title-icon" src="assests/Arrow1.svg" alt="icon">
 							</div>
 							<div class="left-LIGHT-skills">
