--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		<div class="main-about">
 			<div class="main-about-left">
 				<h1 class="main-about-left-title">Анастасия Майстренко, <span style="color: #f38f79">SMM</span>-стратег</h1>
-				<p class="main-about-left-subtitle">Разрабатываю SMM-стратегии для брендов,  которые экономят бюджет клиентов на нецелевые действия и оптимизируют их ресурсы.</p>
+				<p class="main-about-left-subtitle">Я помогаю брендам и экспертам увеличивать онлайн-присутствие и достигать целей через эффективные стратегии и качественный контент.</p>
 				<div class="main-about-left-box">
 					<div class="main-about-left-box-item">
 						<img class="main-about-left-box-item-icon" src="assests/Circle.svg" alt="icon">
