--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
  
 		<div class="main-about">
 			<div class="main-about-left">
-				<h1 class="main-about-left-title">Анастасия Майстренко, <span style="color: #f38f79">SMM</span>-стратег</h1>
+				<h1 class="main-about-left-title">Анастасия Майстренко, <span style="color: #450004">SMM</span>-стратег</h1>
 				<p class="main-about-left-subtitle">Я помогаю брендам и экспертам увеличивать онлайн-присутствие и достигать целей через эффективные стратегии и качественный контент.</p>
 				<div class="main-about-left-box">
 					<div class="main-about-left-box-item">
@@ -162,7 +162,7 @@
 							<div class="left-LIGHT-skills">
 								<p class="left-LIGHT-skills-text">Разработка и реализации SMM - стратегий</p>
 								<p class="left-LIGHT-skills-text">Глубинная аналитика и работа с данными</p>
-								<p class="left-LIGHT-skills-text" style="background-color: #f38f79; color: aliceblue;">35.000р</p>
+								<p class="left-LIGHT-skills-text" style="background-color: #450004; color: aliceblue;">35.000р</p>
 							</div>
 						</div>
 						<div class="left-STANDART">
@@ -173,7 +173,7 @@
 							<div class="left-STANDART-skills">
 								<p class="left-STANDART-skills-text">Разработка и реализации SMM - стратегий</p>
 								<p class="left-STANDART-skills-text">Глубинная аналитика и работа с данными</p>
-								<p class="left-STANDART-skills-text" style="background-color: #f38f79; color: aliceblue;">35.000р</p>
+								<p class="left-STANDART-skills-text" style="background-color: #45004; color: aliceblue;">35.000р</p>
 							</div>
 						</div>
 						<div class="left-VIP">
@@ -184,7 +184,7 @@
 							<div class="left-VIP-skills">
 								<p class="left-VIP-skills-text">Разработка и реализации SMM - стратегий</p>
 								<p class="left-VIP-skills-text">Глубинная аналитика и работа с данными</p>
-								<p class="left-VIP-skills-text" style="background-color: #f38f79; color: aliceblue;">35.000р</p>
+								<p class="left-VIP-skills-text" style="background-color: #45004; color: aliceblue;">35.000р</p>
 							</div>
 						</div>
  
@@ -203,7 +203,7 @@
 							<div class="left-SMM-skills">
 								<p class="left-SMM-skills-text">Разработка и реализации SMM - стратегий</p>
 								<p class="left-SMM-skills-text">Глубинная аналитика и работа с данными</p>
-								<p class="left-SMM-skills-text" style="background-color: #f38f79; color: aliceblue;">35.000р</p>
+								<p class="left-SMM-skills-text" style="background-color: #45004; color: aliceblue;">35.000р</p>
 							</div>
 						</div>
 
@@ -215,7 +215,7 @@
 							<div class="left-CON-skills">
 								<p class="left-CON-skills-text">Разработка и реализации SMM - стратегий</p>
 								<p class="left-CON-skills-text">Глубинная аналитика и работа с данными</p>
-								<p class="left-CON-skills-text" style="background-color: #f38f79; color: aliceblue;">35.000р</p>
+								<p class="left-CON-skills-text" style="background-color: #45004; color: aliceblue;">35.000р</p>
 							</div>
 						</div>
 
