--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
  
 			<div class="main-services-box">
 				<div class="main-services-items">
-					<img class="main-services-items-img" src="assests/5.jpg" alt="icon">
+					<img class="main-services-items-img" src="assests/SMM.jpg" alt="icon">
 					<div class="main-services-items-footer">
 
 						<div class="left-LIGHT">
@@ -192,7 +192,7 @@
 				</div>
  
 				<div class="main-services-items">
-					<img class="main-services-items-img" src="assests/4.jpg" alt="icon">
+					<img class="main-services-items-img" src="assests/SMM2.jpg" alt="icon">
 					<div class="main-services-items-footer">
 
 						<div class="left-SMM">
