--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 				<div class="main-cases-items">
 					<img class="main-cases-items-img" src="assests/coffee.jpg" alt="icon">
 					<div class="main-cases-items-footer">
-						<img class="main-cases-items-footer-icon" src="assests/coffee-icon.svg" alt="icon">
+						<img class="main-cases-items-footer-icon" src="assests/SMM3.jpg" alt="icon">
 						<h4 class="main-cases-items-footer-text">Шляпинк (кофейня)</h4>
 					</div>
 				</div>
@@ -130,7 +130,7 @@
 				<div class="main-cases-items">
 					<img class="main-cases-items-img" src="assests/beauty.jpg" alt="icon">
 					<div class="main-cases-items-footer">
-						<img class="main-cases-items-footer-icon" src="assests/beauty-icon.svg" alt="icon">
+						<img class="main-cases-items-footer-icon" src="assests/SMM3.jpg" alt="icon">
 						<h4 class="main-cases-items-footer-text">AestheticBeauty (салон красоты)</h4>
 					</div>
 				</div>
@@ -138,7 +138,7 @@
 				<div class="main-cases-items">
 					<img class="main-cases-items-img" src="assests/creativity.jpg" alt="icon">
 					<div class="main-cases-items-footer">
-						<img class="main-cases-items-footer-icon" src="assests/creativity-icon.svg" alt="icon">
+						<img class="main-cases-items-footer-icon" src="assests/SMM3.jpg" alt="icon">
 						<h4 class="main-cases-items-footer-text">SSHKETKA (кастомайзер и художник)</h4>
 					</div>
 				</div>
