--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="style.css">
+	<link href="assests/SMM3.jpg" rel="stylesheet" />
 	<title>Portfolio</title>
 </head>
 <body>
@@ -54,7 +55,7 @@
 				<img class="left-hard-title-icon" src="assests/Arrow1.svg" alt="icon">
 			</div>
 			<div class="left-hard-skills">
-				<p class="left-hard-skills-text">Разработка и реализации SMM - стратегий</p>
+				<p class="left-hard-skills-text">Разработка и реализации  - стратегий</p>
 				<p class="left-hard-skills-text">Глубинная аналитика и работа с данными</p>
 				<p class="left-hard-skills-text">Мобильная съемка</p>
 				<p class="left-hard-skills-text">Графический дизайн (Studio, Canva)</p>
@@ -99,12 +100,12 @@
  
 		<div class="main-about">
 			<div class="main-about-left">
-				<h1 class="main-about-left-title">Анастасия Майстренко, <span style="color: #9b040d">SMM</span>-стратег</h1>
+				<h1 class="main-about-left-title">Анастасия Майстренко, <span style="color: #9b040d"></span>-стратег</h1>
 				<p class="main-about-left-subtitle">Я помогаю брендам и экспертам увеличивать онлайн-присутствие и достигать целей через эффективные стратегии и качественный контент.</p>
 				<div class="main-about-left-box">
 					<div class="main-about-left-box-item">
 						<img class="main-about-left-box-item-icon" src="assests/Circle.svg" alt="icon">
-						<p class="main-about-left-box-item-text">1,5 года в SMM-индустрии как стратег и специалист социальных сетей.</p>
+						<p class="main-about-left-box-item-text">1,5 года в -индустрии как стратег и специалист социальных сетей.</p>
 					</div>
 					<div class="main-about-left-box-item">
 						<img class="main-about-left-box-item-icon" src="assests/Circle.svg" alt="icon">
