--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="assests/SMM3.jpg">
-	<title>Portfolio</title>
+	<title>Анастасия | SMM-специалист и стратег</title>
 </head>
 <body>
  
