--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
  
 		<div class="main-about">
 			<div class="main-about-left">
-				<h1 class="main-about-left-title">Анастасия Майстренко, <span style="color: #9b040d"></span>-стратег</h1>
+				<h1 class="main-about-left-title">Анастасия Майстренко, <span style="color: #9b040d">SMM</span>-стратег</h1>
 				<p class="main-about-left-subtitle">Я помогаю брендам и экспертам увеличивать онлайн-присутствие и достигать целей через эффективные стратегии и качественный контент.</p>
 				<div class="main-about-left-box">
 					<div class="main-about-left-box-item">
