--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta property="og:image" content="assests/SMM3.jpg" />
+	<meta property="og:description" content="Анастасия | SMM-специалист и стратег" />
 	<link rel="stylesheet" href="style.css">
 	<link rel="icon" href="assests/SMM3.jpg">
 	<title>Анастасия | SMM-специалист и стратег</title>
