--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 					<img class="main-cases-items-img" src="assests/coffee.jpg" alt="icon">
 					<div class="main-cases-items-footer">
 						<img class="main-cases-items-footer-icon" src="assests/SMM3.jpg" alt="icon">
-						<h4 class="main-cases-items-footer-text">Шляпинк (кофейня)</h4>
+						<h4 class="main-cases-items-footer-text">Шляпник (кофейня)</h4>
 					</div>
 				</div>
  
