--- a/index.html
+++ b/index.html
@@ -118,7 +118,65 @@
 			</div>
 			<img class="main-about-right-img" src="assests/My2.jpg" alt="photo">
 		</div>
- 
+
+
+
+
+		<div class="content-rating">
+
+			<div class="content-rating-text">
+				<p class="content-rating-text-subtitle">мои</p>
+				<h2 class="content-rating-text-title">КЕЙСЫ</h2>
+			</div>
+
+			<div class="content-rating-card center">
+				<div class="content-rating-card-item content-rating-card-item-first">
+					<div class="content-rating-card-item-rating">
+						<img class="content-rating-card-item-rating-icon" src="assests/SMM3.jpg" alt="img">
+					</div>
+					<div class="content-rating-card-item-info">
+						<div>
+							<h3 class="content-rating-card-item-info-title">Шляпинк</h3>
+							<p class="content-rating-card-item-info-subtitle">кофейня</p>
+						</div>
+						<p class="content-rating-card-item-info-price">Подробнее</p>
+					</div>
+				</div>
+				<div class="content-rating-card-item content-rating-card-item-second">
+					<div class="content-rating-card-item-rating">
+						<img class="content-rating-card-item-rating-icon" src="assests/SMM3.jpg" alt="img">
+					</div>
+					<div class="content-rating-card-item-info">
+						<div>
+							<h3 class="content-rating-card-item-info-title">AestheticBeauty </h3>
+							<p class="content-rating-card-item-info-subtitle">салон красоты</p>
+						</div>
+						<p class="content-rating-card-item-info-price">Подробнее</p>
+					</div>
+				</div>
+				<div class="content-rating-card-item content-rating-card-item-third">
+					<div class="content-rating-card-item-rating">
+						<img class="content-rating-card-item-rating-icon" src="assests/SMM3.jpg" alt="img">
+					</div>
+					<div class="content-rating-card-item-info">
+						<div>
+							<h3 class="content-rating-card-item-info-title">SSHKETKA</h3>
+							<p class="content-rating-card-item-info-subtitle">творчество</p>
+						</div>
+						<p class="content-rating-card-item-info-price">Подробнее</p>
+					</div>
+				</div>
+			</div>
+
+		</div>
+
+
+
+
+
+
+
+		
 		<div class="main-cases">
 			<h2 class="main-cases-title">КЕЙСЫ</h2>
  
