--- a/index.html
+++ b/index.html
@@ -118,10 +118,7 @@
 			</div>
 			<img class="main-about-right-img" src="assests/My2.jpg" alt="photo">
 		</div>
-
-
-
-
+		
 		<div class="content-rating">
 
 			<div class="content-rating-text">
@@ -169,47 +166,13 @@
 			</div>
 
 		</div>
-
-
-
-
-
-
-
 		
-		<div class="main-cases">
-			<h2 class="main-cases-title">КЕЙСЫ</h2>
- 
-			<div class="main-cases-box">
-				<div class="main-cases-items">
-					<img class="main-cases-items-img" src="assests/coffee.jpg" alt="icon">
-					<div class="main-cases-items-footer">
-						<img class="main-cases-items-footer-icon" src="assests/SMM3.jpg" alt="icon">
-						<h4 class="main-cases-items-footer-text">Шляпник (кофейня)</h4>
-					</div>
-				</div>
- 
-				<div class="main-cases-items">
-					<img class="main-cases-items-img" src="assests/beauty.jpg" alt="icon">
-					<div class="main-cases-items-footer">
-						<img class="main-cases-items-footer-icon" src="assests/SMM3.jpg" alt="icon">
-						<h4 class="main-cases-items-footer-text">AestheticBeauty (салон красоты)</h4>
-					</div>
-				</div>
- 
-				<div class="main-cases-items">
-					<img class="main-cases-items-img" src="assests/creativity.jpg" alt="icon">
-					<div class="main-cases-items-footer">
-						<img class="main-cases-items-footer-icon" src="assests/SMM3.jpg" alt="icon">
-						<h4 class="main-cases-items-footer-text">SSHKETKA (кастомайзер и художник)</h4>
-					</div>
-				</div>
-			</div>
- 
-		</div>
- 
 		<div class="main-services">
 			<h2 class="main-services-title">МОИ УСЛУГИ</h2>
+			<div class="content-rating-text">
+				<p class="content-rating-text-subtitle">мои</p>
+				<h2 class="content-rating-text-title">УСЛУГИ</h2>
+			</div>
  
 			<div class="main-services-box">
 				<div class="main-services-items">
