--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                 </div>
 
                 <div class="main-video-box">
-                    <iframe width="560" height="315" src="https://youtu.be/7b89QP2pDCI?si=IiNUhDoLIe_Yu7Tl"></iframe>
+                    <iframe class="main-video-box-frame" src="https://youtu.be/7b89QP2pDCI?si=IiNUhDoLIe_Yu7Tl"></iframe>
                 </div>
 
             </div>
